fix for settings on small screens

--- a/css/core.css
+++ b/css/core.css
@@ -271,7 +271,7 @@
   .option {
     display: block;
     position: relative;
-    padding: 0 2.5em;
+    padding: 0 0 0 2.5em;
     margin: 1.5em 0;
     cursor: pointer;
     user-select: none;
